# powerball

./: .gitignore  99-dynamixelsdk-usb.rules  CMakeLists.txt  README.md  randomize.py
Vrep scenes/: admittance_comb.ttt  admittance_high_gross.ttt  admittance_low_gross.ttt  admittance_low_high_fine.ttt  admittance_maze.ttt  factory.ttt  peg_hole.ttt  powerball.ttt
data/IEEE_haptics/9001_1/HighFine/: EMG.csv
data/IEEE_haptics/9001_1/HighGross/: IMU.csv
data/IEEE_haptics/9001_1/LowFine/: EMG.csv
data/IEEE_haptics/9001_1/LowGross/: IMU.csv
data/IEEE_haptics/9002_1/HighFine/: EMG.csv
data/IEEE_haptics/9002_1/HighGross/: IMU.csv
data/IEEE_haptics/9002_1/LowFine/: EMG.csv
data/IEEE_haptics/9002_1/LowGross/: EMG.csv  IMU.csv
data/IEEE_haptics/9002_2/CombComb/: EMG.csv  IMU.csv
data/IEEE_haptics/9002_2/HighComb/: EMG.csv  IMU.csv
data/IEEE_haptics/9002_2/HighFine/: EMG.csv  IMU.csv
data/IEEE_haptics/9002_2/HighGross/: EMG.csv  IMU.csv
data/IEEE_haptics/9002_2/LowComb/: EMG.csv  IMU.csv
data/IEEE_haptics/9002_2/LowFine/: EMG.csv  IMU.csv
data/IEEE_haptics/9002_2/LowGross/: EMG.csv  IMU.csv
data/IEEE_haptics/9003_1/HighFine/: EMG.csv  IMU.csv
data/IEEE_haptics/9003_1/HighGross/: IMU.csv
data/IEEE_haptics/9003_1/LowFine/: EMG.csv
data/IEEE_haptics/9003_1/LowGross/: EMG.csv
data/IEEE_haptics/9003_2/HighComb/: EMG.csv  IMU.csv
data/IEEE_haptics/9003_2/HighFine/: IMU.csv
data/IEEE_haptics/9003_2/HighGross/: IMU.csv
data/IEEE_haptics/9003_2/LowComb/: EMG.csv  IMU.csv
data/IEEE_haptics/9003_2/LowFine/: EMG.csv
data/IEEE_haptics/9004_1/LowFine/: IMU.csv
data/IEEE_haptics/9005_1/HighFine/: EMG.csv  IMU.csv
data/IEEE_haptics/9005_1/LowFine/: EMG.csv
data/IEEE_haptics/9005_1/LowGross/: EMG.csv
data/IEEE_haptics/9005_2/HighComb/: EMG.csv  IMU.csv
data/IEEE_haptics/9005_2/HighFine/: EMG.csv  IMU.csv
data/IEEE_haptics/9005_2/HighGross/: EMG.csv  IMU.csv
data/IEEE_haptics/9005_2/LowComb/: EMG.csv  IMU.csv
data/IEEE_haptics/9005_2/LowFine/: EMG.csv  IMU.csv
data/IEEE_haptics/9005_2/LowGross/: EMG.csv  IMU.csv
data/IEEE_haptics/9006_1/HighGross/: IMU.csv
data/IEEE_haptics/9006_1/LowFine/: EMG.csv
data/IEEE_haptics/9006_1/LowGross/: EMG.csv
data/IEEE_haptics/9006_2/HighComb/: EMG.csv  IMU.csv
data/IEEE_haptics/9006_2/HighFine/: EMG.csv  IMU.csv
data/IEEE_haptics/9006_2/HighGross/: EMG.csv  IMU.csv
data/IEEE_haptics/9006_2/LowComb/: EMG.csv  IMU.csv
data/IEEE_haptics/9006_2/LowFine/: EMG.csv  IMU.csv
data/IEEE_haptics/9006_2/LowGross/: EMG.csv  IMU.csv
data/IEEE_haptics/9007_1/HighGross/: EMG.csv
data/IEEE_haptics/9007_1/LowFine/: EMG.csv  IMU.csv
data/IEEE_haptics/9007_1/LowGross/: IMU.csv
data/IEEE_haptics/9007_2/HighComb/: EMG.csv  IMU.csv
data/IEEE_haptics/9007_2/HighFine/: EMG.csv  IMU.csv
data/IEEE_haptics/9007_2/HighGross/: EMG.csv  IMU.csv
data/IEEE_haptics/9007_2/LowComb/: EMG.csv  IMU.csv
data/IEEE_haptics/9007_2/LowFine/: EMG.csv  IMU.csv
data/IEEE_haptics/9007_2/LowGross/: EMG.csv  IMU.csv
data/IEEE_haptics/9010_1/HighFine/: EMG.csv  IMU.csv
data/IEEE_haptics/9010_1/HighGross/: EMG.csv  IMU.csv
data/IEEE_haptics/9010_1/LowFine/: EMG.csv  IMU.csv
data/IEEE_haptics/9010_1/LowGross/: EMG.csv  IMU.csv
data/IEEE_haptics/9011_1/HighFine/: EMG.csv  IMU.csv
docs/: file_description.md
include/dynamixel/: USB2Dynamixel.h  dynamixel.h
include/gnuplot-5.2.6/: Makefile  config.h  config.status  configure
include/gnuplot-5.2.6/config/: Makefile
include/gnuplot-5.2.6/demo/: Makefile
include/gnuplot-5.2.6/docs/: Makefile  alldoc2gih  allterm.h  checkdoc  doc2gih  doc2hlp  doc2ipf  doc2ms  doc2rnh  doc2rtf  doc2tex  gnuplot.gih
include/gnuplot-5.2.6/m4/: Makefile
include/gnuplot-5.2.6/man/: Makefile
include/gnuplot-5.2.6/share/: Makefile
include/gnuplot-5.2.6/src/: Makefile  bf_test  gnuplot_qt  gnuplot_x11  timestamp.h  ui_QtGnuplotSettings.h
include/gnuplot-5.2.6/term/: Makefile
include/gnuplot-5.2.6/tutorial/: Makefile
include/powerball/: FT_sensor.h  schunk_canopen.h  schunk_canopen_defines.h  schunk_kinematics.h  schunk_powerball.h  schunk_powerball_defines.h
include/sigpack/gplot/: gplot.h
include/utils/: powerball_utils.h  rapidcsv.h  utils.h  vsm_utils.h
include/vrep/: v_repClass.h
include/vsm/: vsm_control.h
include/ximu/: XIMU.h
input_traj/: trust1_traj.txt
src/: USB2Dynamixel.cpp  powerball_utils.cpp  schunk_canopen.cpp  schunk_canopen_io.cpp  schunk_kinematics.cpp  schunk_powerball.cpp  schunk_powerball_accessors.cpp  schunk_powerball_state_fcns.cpp  utils.cpp  vsm_control.cpp  vsm_utils.cpp
src_main/: Kin_funcs.cpp  admittance_pb.cpp  admittance_pb_velMode.cpp  admittance_var.cpp  admittance_velMode_Amir_IEEE_haptics.cpp  admittance_velMode_Amir_practice.cpp  admittance_velMode_IEEE_haptics.cpp  collision_reaction.cpp  dynamixel_phidget.cpp  egg_collision.cpp  hammer_ICRA.cpp  hitting_hammer.cpp  homing.cpp  pos_from_joint_angles copy.cpp  pos_from_joint_angles.cpp  rock_stacking.cpp
src_main/Krushang/: gripper_collision_detection.cpp
src_main/Sri/: Myo_envelop_SJ.cpp  admittance_3d.cpp  admittance_3d_BU.cpp  admittance_3d_new.cpp  admittance_3d_velMode.cpp  admittance_3d_velMode_BU.cpp  admittance_collision_exp.cpp  admittance_team1.cpp  admittance_test.cpp  collision_exp.cpp  force_model_AB.cpp  gripper.cpp  gripper_calibration.cpp  gripper_force_control.cpp  hammer_before_intern.cpp  robot_traj.cpp  robot_vrep_sim.cpp  traj_KG.cpp
src_main/Sri/VSM/: force_model_traj_new.cpp  set_VSM_pos.cpp
src_main/Sri/class_demo/: Untitled Document 1  traj_Qs_Qe.cpp
src_main/Team6/: datarecord.cpp
src_main/identification/: friction_iden.cpp  friction_iden2.cpp  identify.cpp  warmup.cpp
src_main/vrep/: UDP_server.cpp  vrep_client.cpp  vrep_server.cpp
vrep_scenes/: admittance_comb.ttt  admittance_line.ttt  admittance_low_gross.ttt  admittance_low_high_fine.ttt  admittance_practice.ttt  admittance_vert_line.ttt  factory_old.ttt  peg_hole.ttt  powerball.ttt
vrep_scenes/admittance_comb_coord/: inside.csv  outside.csv
(+94 files in other folders)
